--- a/home.css
+++ b/home.css
@@ -15,24 +15,28 @@ body {
 }
 
 #Musbtn {
-  background-color: pink;
+  background-color: deeppink;
 
 }
 
 #Dribtn {
-  
+  background-color: blue;
+
 }
 
 #Schbtn {
-  
+  background-color: Green;
+
 }
 
 #mailbtn {
-  
+  background-color: purple;
+
 }
 
 #clabtn {
-  
+  background-color: gree;
+
 }
 
 #chatbtn {
