--- a/home.css
+++ b/home.css
@@ -22,35 +22,35 @@ body {
 
 #Dribtn {
   background-color: blue;
-
+  color: black;
 }
 
 #Schbtn {
   background-color: Green;
-
+  color: black;
 }
 
 #mailbtn {
   background-color: purple;
-
+  color: black;
 }
 
 #clabtn {
   background-color: darkgreen;
-
+  color: black;
 }
 
 #chatbtn {
   background-color: goldenrod;
-
+  color: black;
 }
 
 #youbtn {
   background-color: darkred;
-
+  color: black;
 }
 
 #spanbtn {
   background-color: darkblue;
-
+  color: black;
 }
